--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "typescript": "^5"
   }
 }
