--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.10.2"
+    "react-intersection-observer": "^9.10.2",
+    "sass": "^1.77.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
