--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-intersection-observer": "^9.10.2",
-    "sass": "^1.77.2"
+    "sass": "^1.77.2",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
