--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.37.1",
     "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "cookies-next": "^4.2.1",
     "next": "14.1.3",
     "react": "^18",
