--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "cookies-next": "^4.2.1",
+    "install": "^0.13.0",
     "next": "14.1.3",
+    "npm": "^10.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-intersection-observer": "^9.10.2",
     "sass": "^1.77.2",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
